--- a/src/main/webapp/css/footer.css
+++ b/src/main/webapp/css/footer.css
@@ -1,7 +1,55 @@
-/* footer {
-	height: 100px;
-	width: 100%;
-    background-color: #ffffff;
-    text-align: center;
-    margin-top: auto;
-} */
+.container {
+  height: auto;
+  min-height: 100%;
+  padding-bottom: 50px;
+
+  main {
+    min-height: 600px;
+  }
+}
+
+footer {
+  position: relative;
+  transform: translateY(0%);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+  padding: 0 0 30px 0;
+
+  .footer-top {
+    height: 45px;
+    box-sizing: border-box;
+
+    img {
+      width: 40px;
+      height: 40px;
+    }
+
+    img:hover {
+      width: 42px;
+      height: 42px;
+    }
+  }
+
+  .footer-middle {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+
+    a:hover {
+      color: var(--orange-5);
+    }
+  }
+}
+
+footer::before {
+  content: "";
+  display: block;
+  width: 100vw;
+  height: 1px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+  z-index: -1;
+}
