--- a/src/main/webapp/css/footer.css
+++ b/src/main/webapp/css/footer.css
@@ -1,11 +1,9 @@
 .container {
   height: auto;
-  min-height: 100%;
-  padding-bottom: 50px;
-
-  main {
-    min-height: 600px;
-  }
+  
+  .main {
+  	min-height:  1000px;
+  } 
 }
 
 footer {
@@ -48,7 +46,7 @@ footer {
 footer::before {
   content: "";
   display: block;
-  width: 100vw;
+  width: 1920px;
   height: 1px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
   z-index: -1;
