--- a/src/main/webapp/css/header.css
+++ b/src/main/webapp/css/header.css
@@ -3,6 +3,7 @@ header {
   justify-content: space-between;
   align-items: center;
   font-weight: bold;
+  font-size: 20px;
   padding: 20px;
 
   nav {
@@ -13,7 +14,7 @@ header {
 
     .header-logo {
 	   .logo-link {
-	   	     font-size: 30px;
+	   	  font-size: 30px;  
 	      color: var(--orange-5);
 	      font-style: italic;
 	   }
@@ -54,6 +55,7 @@ header {
       width: 70px;
       height: 70px;
       border-radius: 50%;
+      margin-left: 5px;
     }
 
     .dropdown-menu {
@@ -63,7 +65,9 @@ header {
       background-color: white;
       box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
       z-index: 999;
+      margin-top: 10px;
       min-width: 140px;
+      
 
       .link {
         display: block;
