--- a/src/main/webapp/css/index.css
+++ b/src/main/webapp/css/index.css
@@ -1,7 +1,7 @@
 /* index.css */
 @font-face {
   font-family: "Pretendard-Regular";
-  src: url("https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff")
+  src: url("../assets/fonts/Pretendard-Regular.otf")
     format("woff");
   font-weight: 400;
   font-style: normal;
@@ -28,7 +28,17 @@
   --orange-8: #804b00; /* Darkest Orange */
 
   font-family: "Pretendard-Regular";
+ }
+
+
+html,
+body {
+  width: 100%;
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+
+.container {
   width: 1024px;
   margin: 0 auto;
-  
 }
