--- a/src/main/webapp/css/member/login.css
+++ b/src/main/webapp/css/member/login.css
@@ -30,6 +30,7 @@
     color: var(--orange-5);
     text-decoration: none;
     font-weight: bold;
+    font-style: italic;
 }
 
 .login__form-cnt {
@@ -93,6 +94,7 @@
     font-size: 1.2rem; /* signup.css의 버튼 폰트 크기와 일치 */
     color: #fff;
     transition: .3s;
+    font-weight: bold;
 }
 
 .login__btn:hover {
@@ -100,14 +102,14 @@
 }
 
 .login__menu {
-    padding-top: 2rem;
+    padding-top: 1.8rem;
     display: flex;
     justify-content: center;
     gap: 2rem;
 }
 
 .login__menu > li > a {
-    font-size: 1.2rem;
+    font-size: 1rem;
     font-weight: 500;
 }
 
