--- a/src/main/webapp/css/member/myMenu.css
+++ b/src/main/webapp/css/member/myMenu.css
@@ -5,7 +5,8 @@
 	font-weight: bold;
 }
 .member--wrap {
-	width: 100%;
+	width: 80%;
+	margin: 0 auto;
 }
 .member__profile-box {
 	padding: 3rem 4rem 2rem;
@@ -65,6 +66,7 @@
     border: 1px solid #ededed;
     border-radius: 4rem;
     font-size: 0.8rem;
+    font-weight: bold;
     cursor: pointer;
     width: 120px;
     height: 30px;
