design: member 프론트 추가 작업

--- a/src/main/webapp/css/member/myMenu.css
+++ b/src/main/webapp/css/member/myMenu.css
@@ -52,6 +52,11 @@
     color: #2F2F2F;
 }
 
+.member__profile--intro {
+	font-size: 1.4rem;
+    color: #2F2F2F;
+}
+
 .member__profile--actions {
 	display: flex;
     flex-direction: column;
