design: member 디자인 수정

--- a/src/main/webapp/css/member/memberProfile.css
+++ b/src/main/webapp/css/member/memberProfile.css
@@ -1,13 +1,13 @@
 @charset "UTF-8";
+.inner {
+	position : relative;
+	max-width: 1024px;
+	margin : 0 auto;
+}
 .subTitle {
 	font-size: 2rem;
-	margin-left: 4rem;
 	font-weight: bold;
-}
-
-.memberProfile--wrap {
-	width: 80%;
-	margin: 0 auto;
+	padding: 0 20px;
 }
 
 .memberProfile__profile-box {
