--- a/src/main/webapp/css/member/signup.css
+++ b/src/main/webapp/css/member/signup.css
@@ -64,7 +64,7 @@
 }
 
 .signup__input-box > input:focus {
-    outline-color: var(--orange-5);
+    outline : 2px solid var(--orange-5);
 }
 
 .signup__input-box > button {
@@ -158,4 +158,8 @@
     font-size: 0.8rem;
     color: #292A5D;
     text-align: center;
+}
+
+.birth-inputs > input:focus {
+    outline : 2px solid var(--orange-5);
 }
