design: crew 디자인 변경

--- a/src/main/webapp/css/crew/list.css
+++ b/src/main/webapp/css/crew/list.css
@@ -17,6 +17,10 @@
   display: block;
   white-space: nowrap;
 }
+.ctg-crew__items li a:hover {
+  fill: var(--orange-5);
+  color: var(--orange-5);
+}
 .ctg-crew__icons {
   display: block;
   margin: 5px auto;
