--- a/src/main/webapp/css/index.css
+++ b/src/main/webapp/css/index.css
@@ -27,14 +27,14 @@
   --orange-7: #b36a00;
   --orange-8: #804b00; /* Darkest Orange */
   
-  --gray-100: #bbbbbb;
-  --gray-200: #aaaaaa;
-  --gray-300: #999999;
-  --gray-400: #888888;
-  --gray-500: #777777;
-  --gray-600: #666666;
-  --gray-700: #555555;
-  --gray-800: #444444;
+  --gray-1: #eeeeee;
+  --gray-2: #dddddd;
+  --gray-3: #cccccc;
+  --gray-4: #bbbbbb;
+  --gray-5: #aaaaaa;
+  --gray-6: #999999;
+  --gray-7: #888888;
+  --gray-8: #777777;
 
   font-family: "Pretendard-Regular";
  }
