--- a/src/main/webapp/css/member/myPage.css
+++ b/src/main/webapp/css/member/myPage.css
@@ -180,12 +180,12 @@
 .remove-img {
     position: absolute;
     right: -10px; /* 위치 조정 */
-    bottom: 30px; /* 위치 조정 */
-    background-color: rgba(0, 0, 0, 0.5); /* 반투명 검정색 배경 */
+    bottom: 20px; /* 위치 조정 */
+    background-color: var(--orange-5);
     color: white; /* 흰색 텍스트 */
     border-radius: 50%; /* 둥근 모서리 */
-    width: 15px; /* 크기 조정 */
-    height: 15px; /* 크기 조정 */
+    width: 25px;
+    height: 25px; /* 크기 조정 */
     display: flex;
     align-items: center;
     justify-content: center;
