--- a/src/main/webapp/css/crew/writeForm.css
+++ b/src/main/webapp/css/crew/writeForm.css
@@ -30,7 +30,7 @@
     max-width: 150px;
     width: 100%;
     box-sizing: border-box;
-    border-radius: 5px;
+    border-radius: 10px;
     border: 1px solid var(--gray-5);
     padding: 10px 10px;
   }
@@ -42,8 +42,8 @@
 
     .meeting-register__crewName-input {
       border: 1px solid var(--gray-5);
-      border-radius: 5px;
-      width: 100%;
+      border-radius: 10px;
+      width: 350px;
 
       &:focus {
         border: 1px solid var(--gray-8);
@@ -52,6 +52,7 @@
 
     .meeting-register__crewMax-input {
       border: 1px solid var(--gray-5);
+      border-radius: 10px;
       max-width: 100px;
 
       &:focus {
@@ -61,9 +62,11 @@
 
     .meeting-register__crewContent-textarea {
       border: 1px solid var(--gray-5);
-      border-radius: 5px;
+      border-radius: 10px;
       resize: none;
       outline: none;
+      font-size: 14px;
+      padding: 10px;
 
       &:focus {
         border: 1px solid var(--gray-8);
@@ -79,7 +82,9 @@
   }
 
   .banner-image {
+    /* width: 100%; */
     width: 100%;
+    height: 300px;
   }
 
   .image-label {
