design: 기본 색상 코드 추가

--- a/src/main/webapp/css/index.css
+++ b/src/main/webapp/css/index.css
@@ -35,6 +35,7 @@
   --gray-6: #999999;
   --gray-7: #888888;
   --gray-8: #777777;
+  --gray-9: #666666;
 
   font-family: "Pretendard-Regular";
  }
