--- a/src/main/webapp/css/header.css
+++ b/src/main/webapp/css/header.css
@@ -38,7 +38,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    gap: 10px;
+    gap: 20px;
 
     a:hover {
       color: var(--orange-5);
@@ -50,6 +50,7 @@ header {
     display: flex;
     align-items: center;
     gap: 30px;
+    cursor: pointer;
     
     .profile-image {
       width: 70px;
@@ -67,28 +68,39 @@ header {
       z-index: 999;
       margin-top: 10px;
       min-width: 140px;
-      
-
-      .link {
-        display: block;
-        padding: 12px 16px;
-        color: black;
-      }
-
-      .link:hover {
-        color: var(--orange-5);
-        background-color: #f1f1f1;
-      }
+	  border-radius: 10px;
+	  font-size: 15px;
     }
+
+    .dropdown-menu .link {
+	  display: block;
+	  padding: 12px 16px;
+	  color: black;
+	}
+
+	.dropdown-menu .link:hover {
+		color: var(--orange-5);
+		background-color: var(--gray-1);
+		border-radius: 5px;
+	}
   }
 }
 
 .header-address {
-    margin-left: 350px;
+	display: flex;
+	align-items : center;
+    cursor: pointer;
+    gap : 5px;
 }
 
-.header-address, .header-account {
+.header-account {
 	display: flex;
 	align-items : center;
 	gap : 10px;
+}
+
+.header-container {
+  display: flex;
+  align-items: center;
+  gap: 30px; /* 고정 간격 */
 }
