--- a/src/main/webapp/css/crew/detail.css
+++ b/src/main/webapp/css/crew/detail.css
@@ -67,7 +67,7 @@
   display: flex;
   flex-direction: row;
   margin-bottom: 50px;
-  height: 500px;
+  height: 600px;
 }
 
 .left-section {
@@ -76,7 +76,7 @@
 }
 
 .right-section {
-    max-height: 500px; 
+    max-height: 600px; 
     overflow-y: auto;
   flex: 1; 
   background-color: var(--gray-1);
@@ -94,7 +94,8 @@
 .crew-content {
   margin-top: 20px;
   margin-bottom: 20px;
-  height: 370px;
+  height: 480px;
+  line-height: 20px;
 }
 
 .btn-main {
