--- a/src/main/webapp/css/meeting/list.css
+++ b/src/main/webapp/css/meeting/list.css
@@ -6,7 +6,10 @@
   gap: 30px;
   margin-top: 30px;
   margin-bottom: 50px;
-  font-size: 25px;
+  font-size: 18px;
+  background-color: var(--gray-1);
+  border-radius: 10px;
+  padding: 15px 0;
 }
 .meeting-menu_items li {
   text-align: center;
@@ -28,6 +31,7 @@
 }
 .day-of-week {
 	margin: 0 5px;
+	margin-bottom: 5px;
 }
 .meeting-container {
   display: flex;
