--- a/src/main/webapp/css/board/listBoard.css
+++ b/src/main/webapp/css/board/listBoard.css
@@ -12,15 +12,19 @@
 	}
 		.crew-menu__items a {
 			text-decoration: none;
-			color: black;
+			color: black;;
 			font-weight: bold;
+	}
+	
+	.crew-menu__items a:hover {
+		color: #FB9B00;
 	}
 	
 		/* 게시판 카테고리 버튼 */
 	.category-buttons {
 	display: flex;
 	gap: 20px;
-	margin-left: 50px;
+	margin-left: 185px;
 	}
 	
 	.category-button {
@@ -49,7 +53,7 @@
   max-width: 1200px; /* 최대 너비 설정 */
   margin: 20px auto; /* 상하 마진으로 중앙 정렬 */
   border-collapse: collapse;
-  margin-left: 50px
+  margin-left: 0px
 }
 
 .board-row {
@@ -148,14 +152,14 @@ img {
 }
 
 /* 링크 스타일 제거 */
-a {
-  color: black; /* 링크 색상 */
-  text-decoration: none; /* 밑줄 제거 */
+/* a {
+  color: black; 링크 색상
+  text-decoration: none; 밑줄 제거
 }
 
 a:hover {
-  text-decoration: underline; /* 호버 시 밑줄 */
-}
+  text-decoration: underline; 호버 시 밑줄
+} */
 
 /* 페이지네이션 영역 전체 스타일링 */
 .pagination {
